# agent-bridge

./: .gitignore  AGENTS.md  CLAUDE.md  PROGRESS.md  README.md  config.yaml.example  pyproject.toml
docs/: ROADMAP.md
src/agent_bridge/: __init__.py  __main__.py  codex.py  codex_cli.py  config.py  configure.py  dashboard.py  installer.py  launcher.py  main.py  observability.py  server.py
src/agent_bridge/handlers/: openai.py
src/agent_bridge/parsers/: glm.py
src/agent_bridge/transformers/: __init__.py  anthropic.py  codex.py  responses.py
src/moma_proxy/: __init__.py  __main__.py  codex.py  codex_cli.py  config.py  configure.py  installer.py  launcher.py  main.py  observability.py  server.py
src/moma_proxy/handlers/: __init__.py  openai.py
src/moma_proxy/parsers/: __init__.py  glm.py
src/moma_proxy/transformers/: __init__.py  anthropic.py  codex.py  responses.py
tests/: __init__.py  conftest.py  test_codex_integration.py  test_compat_imports.py  test_config.py  test_configure.py  test_installer.py  test_launcher.py  test_observability.py  test_openai_handler_integration.py  test_packaging.py  test_parser.py  test_transformer.py
