[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moma-proxy"
version = "0.1.0"
description = "API proxy for GLM-5.1 to Codex/Anthropic protocol conversion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "httpx>=0.25.0",
]

[project.scripts]
moma-proxy = "moma_proxy.main:main"
moma = "moma_proxy.codex_cli:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
