[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-bridge"
version = "0.1.0"
description = "AgentBridge gateway for Codex/Claude Code compatible model providers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "httpx>=0.25.0",
]

[project.scripts]
agent-bridge = "agent_bridge.main:main"
moma-proxy = "agent_bridge.main:main"
moma = "agent_bridge.codex_cli:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
